[CI] Trying to set STAGING_DIR and TOOLCHAIN_DIR env variables via CMake to remove warnings on compile time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.1.3)
 project(wi-bot)
 
 if(NOT WIN32)
+	set(ENV{STAGING_DIR} /opt)
+	set(ENV{TOOLCHAIN_DIR} $ENV{STAGING_DIR}/toolchain-mips_34kc_gcc-4.8-linaro_uClibc-0.9.33.2)
 	add_subdirectory(src/mjpgstreamer)
 	add_subdirectory(src/cmd-server)
 endif()
