--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(wi-bot)
 if(NOT WIN32)
 	set(ENV{STAGING_DIR} /opt)
 	set(ENV{TOOLCHAIN_DIR} $ENV{STAGING_DIR}/toolchain-mips_34kc_gcc-4.8-linaro_uClibc-0.9.33.2)
+	add_subdirectory(src/arduino)
 	add_subdirectory(src/mjpgstreamer-plugins/output_rawtcp)
 	add_subdirectory(src/cmd-server)
 	add_subdirectory(thirdparty)
