--- a/src/arduino/CMakeLists.txt
+++ b/src/arduino/CMakeLists.txt
@@ -1,12 +1,15 @@
-cmake_minimum_required(VERSION 3.1.3)
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/../../cmake/ArduinoToolchain.cmake)
 
-set(CMAKE_TOOLCHAIN_FILE ${PROJECT_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
-link_directories(${PROJECT_SOURCE_DIR}/thirdparty/arduino-libs)
+cmake_minimum_required(VERSION 3.1.3)
 
 project(uno-firmware C CXX)
 
-generate_arduino_firmware(uno-firmware
-    SKETCH firmware.ino
+link_directories(${CMAKE_SOURCE_DIR}/thirdparty/arduino-libs)
+
+print_board_list()
+print_programmer_list()
+
+GENERATE_ARDUINO_FIRMWARE(uno-firmware
+    SKETCH "firmware.ino"
     PORT  /dev/ttyACM0
-    BOARD uno
-)
+    BOARD uno)
