--- a/src/arduino/CMakeLists.txt
+++ b/src/arduino/CMakeLists.txt
@@ -2,15 +2,11 @@ set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/../../cmake/ArduinoToolchain.cmake)
 
 cmake_minimum_required(VERSION 3.1.3)
 
-project(uno-firmware C CXX)
+project(uno-firmware CXX)
 
 set(ARDUINO_EXTRA_LIBRARIES_PATH ${CMAKE_SOURCE_DIR}/../../thirdparty/arduino-libs)
 
 link_directories(${ARDUINO_EXTRA_LIBRARIES_PATH})
-include_directories(SYSTEM
-	${ARDUINO_EXTRA_LIBRARIES_PATH}/Timer
-	${ARDUINO_EXTRA_LIBRARIES_PATH}/Adafruit_PWMServoDriver
-)
 
 print_board_list()
 print_programmer_list()
