--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,22 @@ sudo: required
 language: cpp
 services:
   - docker
-  
+env:
+  - OPENWRT_SDK_NAME=OpenWrt-SDK-15.05.1-ar71xx-generic_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64
+  - IMAGE_BUILDER_NAME=OpenWrt-ImageBuilder-15.05.1-ar71xx-generic.Linux-x86_64  
 before_install:
   - sudo mkdir /wi-bot
   - docker pull glebka/ar71xx-buildenv
 
 script:
-  - docker run -v /wi-bot:/wi-bot --rm -t -i glebka/ar71xx-buildenv /bin/sh -c "git clone --recursive https://github.com/Glebka/wi-bot.git; cd /wi-bot; cmake . && make && ls /wi-bot/dist/"
+  - docker run -v /wi-bot:/wi-bot --rm -t -i glebka/ar71xx-buildenv 
+    /bin/sh -c "git clone --recursive https://github.com/Glebka/wi-bot.git; 
+    cd /wi-bot; 
+    cmake . && make;
+    cd /opt/$IMAGE_BUILDER_NAME;
+    make image PROFILE=TLMR3020 PACKAGES="-ppp -ppp-mod-pppoe -luci -lua -firewall -ip6tables -kmod-ip6tables -kmod-ipv6 -odhcp6c
+    kmod-video-core kmod-video-uvc mjpg-streamer";
+    ls -aR bin
 
 deploy:
   provider: bintray
